# algo-practice

./: .gitignore  CMakeLists.txt  README.md
algorithms/: binarySearch.go  insertionSort.py  main.go  mergeSort.py  quickSort.go
codeforces_a/: 2048_game.hs  anton_and_danik.cpp  bear_and_big_brother.cpp  beautiful_matrix.cpp  beautiful_year.cpp  bit++.cpp  boy_or_girl.cpp  calculating_function.cpp  caps_lock.cpp  chat_room.cpp  domino_piling.cpp  dubstep.cpp  elephant.cpp  even_odds.cpp  expression.cpp  football.cpp  george_and_accomodation.cpp  gravity_flip.cpp  helpful_maths.cpp  hq9+.cpp  hulk.cpp  i_wanna_be_the_guy.cpp  in_search_of_an_easy_problem.cpp  insomnia_cure.cpp  iq_test.cpp  kefa_and_first_steps.cpp  lucky_division.cpp  magnets.cpp  nearly_lucky_number.cpp  next_round.cpp  petya_and_strings.cpp  presents.cpp  puzzles.cpp  soldier_and_bananas.cpp  stones_on_the_table.cpp  string_task.cpp  team.cpp  theatre_square.cpp  tram.cpp  translation.cpp  (+9 more)
codeforces_b/: drinks.cpp  queue_at_the_school.cpp  taxi.cpp
leetcode/: easyCommonPrefix.py  easyRomanNumeral.py  easyRunningSum.py  easyTimeConversion.py  mediumCoinChange.py  mediumMinCostTickets.py  mediumThreeSum.py  template.py  utils.py
