cmake_minimum_required(VERSION 3.10)
project(algo-practice)
set(CMAKE_CXX_STANDARD 17)

add_executable(watermelon codeforces_a/watermelon.cpp)
add_executable(theatre_square codeforces_a/theatre_square.cpp)
add_executable(way_too_long_words codeforces_a/way_too_long_words.cpp)
add_executable(next_round codeforces_a/next_round.cpp)
add_executable(team codeforces_a/team.cpp)
add_executable(string_task codeforces_a/string_task.cpp)
add_executable(domino_piling codeforces_a/domino_piling.cpp)
add_executable(bit++ codeforces_a/bit++.cpp)
add_executable(petya_and_strings codeforces_a/petya_and_strings.cpp)
add_executable(beautiful_matrix codeforces_a/beautiful_matrix.cpp)
add_executable(helpful_maths codeforces_a/helpful_maths.cpp)
add_executable(word_capitalization codeforces_a/word_capitalization.cpp)
add_executable(football codeforces_a/football.cpp)
add_executable(stones_on_the_table codeforces_a/stones_on_the_table.cpp)
add_executable(boy_or_girl codeforces_a/boy_or_girl.cpp)
add_executable(young_physicist codeforces_a/young_physicist.cpp)
add_executable(lucky_division codeforces_a/lucky_division.cpp)
add_executable(soldier_and_bananas codeforces_a/soldier_and_bananas.cpp)
add_executable(chat_room codeforces_a/chat_room.cpp)
add_executable(tram codeforces_a/tram.cpp)
add_executable(bear_and_big_brother codeforces_a/bear_and_big_brother.cpp)
add_executable(twins codeforces_a/twins.cpp)
add_executable(wrong_subtraction codeforces_a/wrong_subtraction.cpp)
add_executable(elephant codeforces_a/elephant.cpp)
add_executable(hq9+ codeforces_a/hq9+.cpp)
add_executable(taxi codeforces_b/taxi.cpp)
add_executable(queue_at_the_school codeforces_b/queue_at_the_school.cpp)
add_executable(nearly_lucky_number codeforces_a/nearly_lucky_number.cpp)
add_executable(translation codeforces_a/translation.cpp)
add_executable(word codeforces_a/word.cpp)
add_executable(george_and_accomodation codeforces_a/george_and_accomodation.cpp)
add_executable(caps_lock codeforces_a/caps_lock.cpp)
add_executable(anton_and_danik codeforces_a/anton_and_danik.cpp)
add_executable(beautiful_year codeforces_a/beautiful_year.cpp)
add_executable(kefa_and_first_steps codeforces_a/kefa_and_first_steps.cpp)
add_executable(presents codeforces_a/presents.cpp)
add_executable(vanya_and_fence codeforces_a/vanya_and_fence.cpp)
add_executable(in_search_of_an_easy_problem codeforces_a/in_search_of_an_easy_problem.cpp)
add_executable(hulk codeforces_a/hulk.cpp)
add_executable(expression codeforces_a/expression.cpp)
add_executable(magnets codeforces_a/magnets.cpp)
add_executable(even_odds codeforces_a/even_odds.cpp)
add_executable(puzzles codeforces_a/puzzles.cpp)
add_executable(calculating_function codeforces_a/calculating_function.cpp)
add_executable(gravity_flip codeforces_a/gravity_flip.cpp)
add_executable(dubstep codeforces_a/dubstep.cpp)
add_executable(ultra_fast_mathematician codeforces_a/ultra_fast_mathematician.cpp)
add_executable(drinks codeforces_b/drinks.cpp)
add_executable(insomnia_cure codeforces_a/insomnia_cure.cpp)
add_executable(i_wanna_be_the_guy codeforces_a/i_wanna_be_the_guy.cpp)
add_executable(iq_test codeforces_a/iq_test.cpp)